--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -464,7 +464,6 @@
 
 .testimonials .para {
     font-size: 19px;
-    /* color: #021a53; */
     color: #fff;
 }
 
@@ -472,14 +471,12 @@
     font-size: 40px;
     font-weight: 500;
     color: #fff;
-    /* color: #0071bc; */
 
 }
 
 .testimonials .sec-para {
     width: 60%;
     text-align: center;
-    /* color: gray; */
     color: #e7e4e4;
 }
 
@@ -528,10 +525,18 @@
 
 .testimonials-inside-box div img {
     width: 60px;
-    /* height: 60px; */
-    /* border: 2px solid rgb(225, 221, 221); */
     border-radius: 50%;
 }
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -764,6 +769,11 @@
 }
 
 @media (max-width:750px) {
+
+    .footer {
+        margin-top: 30px;
+    }
+
     .footer-content {
         display: flex;
         flex-direction: column;
@@ -1433,6 +1443,29 @@
 
 
 }
+
+@media (max-width:430px) {
+
+    .testimonials .testimonials-box {
+        position: relative;
+    }
+
+    .testimonials-box .testimonials-inside-box {
+        position: absolute;
+        left: -100%;
+        transition: left 2s;
+        /* opacity: -100; */
+        visibility: hidden;
+    }
+
+    .testimonials-inside-box.visible {
+        position: relative;
+        left: 0;
+        /* opacity: 1; */
+        visibility: visible;
+    }
+}
+
 
 /* -------------------Contact ----------------- */
 
