--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -5,7 +5,7 @@
     background: #0b1a38;
     padding: 0 50px;
     position: relative;
-
+    scroll-margin-top: 50px;
 }
 
 .home .home-left {
@@ -374,7 +374,7 @@
 
 #about {
     margin: 50px auto;
-    scroll-margin-top: 150px;
+    scroll-margin-top: 100px;
 
 
 }
@@ -441,6 +441,11 @@
 .about p {
     color: #676767;
     margin-bottom: 15px;
+}
+
+.about-right p {
+    text-align: justify;
+
 }
 
 
@@ -1302,6 +1307,10 @@
         padding: 0px 14px;
     }
 
+    .pricing h1 {
+        font-size: 34px;
+    }
+
     .pricing-container .pricing-box {
         flex: 1 1 300px;
 
@@ -1349,6 +1358,8 @@
     .about-right {
         flex-basis: 100%;
     }
+
+
 }
 
 
@@ -1436,6 +1447,8 @@
 
     .testimonials .sec-para {
         font-size: 12px;
+        text-align: justify;
+        width: 90%;
     }
 
     .main-contact h1 {
@@ -1458,7 +1471,7 @@
         transition: left 2s;
         /* opacity: -100; */
         visibility: hidden;
-        height: 250px;
+        height: 220px;
     }
 
     .testimonials-inside-box h2 span {
@@ -1470,6 +1483,13 @@
         left: 0;
         visibility: visible;
     }
+
+    .testimonials-inside-box:hover .testimonials-inside-box {
+        transition: none;
+        left: 0;
+    }
+
+
 }
 
 
